forth/test/fail/test_const_fold_redundant_loc_umod_zero.af
use' ../../lang.af
fun: test_const_fold_redundant_loc_umod_zero { val -- out } 0 umod: val val end
